--- a/colab_ml_training/demo_notebook_patterns.ipynb
+++ b/colab_ml_training/demo_notebook_patterns.ipynb
@@ -18,34 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "acae54e37e7d407bbb7b55eff062a284",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-dotenv in /usr/local/lib/python3.12/dist-packages (1.2.1)\n",
-      "Requirement already satisfied: openai in /usr/local/lib/python3.12/dist-packages (2.9.0)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.12/dist-packages (from openai) (4.12.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from openai) (1.9.0)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.12/dist-packages (from openai) (0.28.1)\n",
-      "Requirement already satisfied: jiter<1,>=0.10.0 in /usr/local/lib/python3.12/dist-packages (from openai) (0.12.0)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.12/dist-packages (from openai) (2.12.3)\n",
-      "Requirement already satisfied: sniffio in /usr/local/lib/python3.12/dist-packages (from openai) (1.3.1)\n",
-      "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.12/dist-packages (from openai) (4.67.1)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.12/dist-packages (from openai) (4.15.0)\n",
-      "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.12/dist-packages (from anyio<5,>=3.5.0->openai) (3.11)\n",
-      "Requirement already satisfied: certifi in /usr/local/lib/python3.12/dist-packages (from httpx<1,>=0.23.0->openai) (2025.11.12)\n",
-      "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.12/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.9)\n",
-      "Requirement already satisfied: h11>=0.16 in /usr/local/lib/python3.12/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.16.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.12/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.41.4 in /usr/local/lib/python3.12/dist-packages (from pydantic<3,>=1.9.0->openai) (2.41.4)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.2 in /usr/local/lib/python3.12/dist-packages (from pydantic<3,>=1.9.0->openai) (0.4.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PATTERN 1: Dependency Management\n",
     "# --------------------------------\n",
@@ -57,20 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9a63283cbaf04dbcab1f6479b197f3a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Working Directory: /content\n",
-      "✅ Wrote file to: /content/demo_data.txt\n",
-      "   Exists? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PATTERN 2: Filesystem Isolation (The \"Container Gap\")\n",
     "# -----------------------------------------------------\n",
@@ -93,21 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
+   "id": "c8da748a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Clear any stale keys from the current kernel session so PATTERN 3 will re-load/prompt.\n",
+    "os.environ.pop(\"OPENAI_API_KEY\", None)\n",
+    "os.environ.pop(\"LLM_PROVIDER_SERVICE_OPENAI_API_KEY\", None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dd0d8092fe74a7c96281538738b07e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚠️  .env not found (expected in container environments).\n",
-      "ℹ️  Key missing. Injecting fallback key from host...\n",
-      "✅ Injected fallback key into os.environ\n",
-      "Active OpenAI Key: sk-p...ZYEA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PATTERN 3: Secret Management with Fallback\n",
     "# ------------------------------------------\n",
@@ -137,18 +106,18 @@
     "    else:\n",
     "        print(\"⚠️  .env not found (expected in container environments).\")\n",
     "\n",
-    "    # 2. Check/Inject Token\n",
+    "    # 2. If running inside HuleEdu Docker, map the prefixed service key into\n",
+    "    # OPENAI_API_KEY for this notebook kernel session.\n",
+    "    prefixed_key = os.environ.get(\"LLM_PROVIDER_SERVICE_OPENAI_API_KEY\")\n",
+    "    if prefixed_key and not os.environ.get(\"OPENAI_API_KEY\"):\n",
+    "        os.environ[\"OPENAI_API_KEY\"] = prefixed_key\n",
+    "\n",
+    "    # 3. Prompt interactively as a last resort (no secrets committed)\n",
     "    api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
     "    if not api_key:\n",
-    "        print(\"ℹ️  Key missing. Injecting fallback key from host...\")\n",
-    "\n",
-    "        # Hardcoded key from your .env file\n",
-    "        fallback_key = \"sk-proj-REDACTED\"\n",
-    "\n",
-    "        # Set in environment\n",
-    "        os.environ[\"OPENAI_API_KEY\"] = fallback_key\n",
-    "        api_key = fallback_key\n",
-    "        print(\"✅ Injected fallback key into os.environ\")\n",
+    "        api_key = getpass(\"Enter OPENAI_API_KEY (will not be echoed): \").strip()\n",
+    "        if api_key:\n",
+    "            os.environ[\"OPENAI_API_KEY\"] = api_key\n",
     "\n",
     "    return api_key\n",
     "\n",
@@ -160,19 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "72eea5119410473aa328ad9291626812",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🤖 Sending request to OpenAI (gpt-5-nano) [Attempt 3: Debugging empty response]...\n",
-      "✅ Response Content: '„Jetzt verstehst du, wie du Jupyter-Notebooks in VS Code verwenden solltest.“'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PATTERN 4: Execution Verification\n",
     "# -------------------------------\n",
@@ -201,7 +161,7 @@
     "                    \"Jupyter notebooks in VS Code!' in German.\",\n",
     "                }\n",
     "            ],\n",
-    "            max_completion_tokens=1000,\n",
+    "            max_completion_tokens=2000,\n",
     "        )\n",
     "\n",
     "        content = response.choices[0].message.content\n",
@@ -216,14 +176,6 @@
     "        print(f\"❌ API Call Failed: {e}\")\n",
     "        print(\"Note: If you see 'max_tokens' error, try reloading the notebook window.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aafa7d45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -231,6 +183,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
